--- a/style.css
+++ b/style.css
@@ -3,11 +3,14 @@
     margin: 0;
     padding: 0;
   }
-  
+  body{
+    background: url(./img/112.jpg);
+
+  }
   header {
     text-align: center  ;
-    background-color: #333;
-    background-image: url(/img/d.jpg);
+    /*background-color: #333;*/
+    /*background-image: url(/img/d.jpg);*/
     
     color: white;
     padding: 1em;
@@ -25,6 +28,8 @@
     gap: 1em;
     padding: 1em;
   }
+
+  
   
   .item {
     background-color: #ddd;
@@ -36,14 +41,40 @@
     grid-column: 1 / 3;
     grid-row: 1 / 2;
     text-align: center;
+    background: rgb(13, 73, 152);
+    border-radius: 6px;
+    color: white;
   }
   
   .item2 {
     grid-column: 3 / 5;
     grid-row: 1 / 2;
     text-align: center;
+    background: rgb(17, 47, 179);
+    border-radius: 6px;
+    color: white;
   }
-  
+
+  .fondoUno{
+    background: rgb(13, 73, 152);
+    border-radius: 6px;
+    text-align: center;
+  }
+
+   .fondoUno:hover {
+    background-color: #0a355d;
+  }
+
+  .fondoDos{
+    background: rgb(17, 47, 179);
+    border-radius: 6px;
+    text-align: center;
+  }
+
+ .fondoDos:hover {
+    background-color: #0a355d;
+  }
+
   .item3 {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
@@ -125,8 +156,13 @@
     grid-row: 5 / 6;
   }
 
-
+  button{
+    height: 30px;
+    width: 150px;
+    box-shadow: 1px 1px 10px 10px #2e6c86;
+  }
 
   footer{
+    padding-top: 50px;
     text-align: center;
   }
