--- a/style.css
+++ b/style.css
@@ -4,20 +4,47 @@
     padding: 0;
   }
   body{
-    background: url(./img/112.jpg);
+    /*background: url(./img/112.jpg);*/
+    height: 100vh;
+    background-color: #c9dfed;
+    /*background-image: linear-gradient(135deg,#b9b9da,#585b88,#8ea0e9,#4d6d82,#6789e8,
+    #62b6da,#496588);
+    background-size: 500%;
+    animation:animafond 10s infinite ;*/
+    
 
   }
+
+  @keyframes animafond{
+    0%{
+        background-position: 0% 50%;
+    }
+
+    50%{
+        background-position: 100% 50%;
+    }
+
+    100%{
+        background-position: 0% 50%;
+    }
+} 
+
   header {
+    background-image: url(./img/c-Recuperado.jpg);
     text-align: center  ;
     /*background-color: #333;*/
     /*background-image: url(/img/d.jpg);*/
+    box-shadow: 2px 4px 10px 3px rgba(0, 0, 0, 0.3);
+    font-size: 25px;
+    letter-spacing: 3px;
+    color: rgb(255, 255, 255);
+    font-style:unset;
     
-    color: white;
     padding: 1em;
   }
 
   .logo{
-    width: 200px;
+    width: 300px;
 
   }
   
@@ -41,39 +68,56 @@
     grid-column: 1 / 3;
     grid-row: 1 / 2;
     text-align: center;
-    background: rgb(13, 73, 152);
-    border-radius: 6px;
+    background: #353965;
+    border: none;
+    border-radius: 15px;
     color: white;
+    
   }
-  
+
+  .item1 p{
+    font-size: 45px;
+
+  }
   .item2 {
     grid-column: 3 / 5;
     grid-row: 1 / 2;
     text-align: center;
-    background: rgb(17, 47, 179);
-    border-radius: 6px;
+    background: #353965;
+    border: none;
+    border-radius: 15px;
     color: white;
   }
 
-  .fondoUno{
-    background: rgb(13, 73, 152);
-    border-radius: 6px;
-    text-align: center;
+
+  .item2 p{
+    font-size: 45px;
+
   }
 
-   .fondoUno:hover {
-    background-color: #0a355d;
+  .fondoUno{
+    background: #c9dfed;
+    border: none;
+    border-radius: 15px;
+    text-align: center;
+    
   }
+
+   /*.fondoUno:hover {
+    background-color: #0a355d;
+  }*/
 
   .fondoDos{
-    background: rgb(17, 47, 179);
-    border-radius: 6px;
+    background: #c9dfed;
+    border: none;
+    border-radius: 15px;
     text-align: center;
+    
   }
 
- .fondoDos:hover {
+ /*.fondoDos:hover {
     background-color: #0a355d;
-  }
+  }*/
 
   .item3 {
     grid-column: 1 / 2;
@@ -157,12 +201,41 @@
   }
 
   button{
-    height: 30px;
-    width: 150px;
-    box-shadow: 1px 1px 10px 10px #2e6c86;
+    height: 60px;
+    width: 330px;
+    border: none;
+    border-radius: 15px;
+    background: #353965;
+    letter-spacing: 3px;
+    font-family: 'Lobster', cursive;
+    font-family: 'Poppins', sans-serif;
+    box-shadow: 2px 4px 1px 3px #a066cb;
+   
   }
 
+  button:hover{
+    background-color:#2e3a44
+
+  }
+
+  a{
+    color: #eff3f6;
+    
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+    display: block;
+    text-transform: uppercase;
+
+  }
   footer{
     padding-top: 50px;
     text-align: center;
+    background: #0a355d;
+    color: white;
+    font-size: 15px;
+    padding: 40px;
+    box-shadow: 2px 4px 10px 13px rgba(0, 0, 0, 0.3);
   }
+
+  /*Efects*/
