--- a/style.css
+++ b/style.css
@@ -72,6 +72,9 @@
     border: none;
     border-radius: 15px;
     color: white;
+    font-family: 'Lobster', cursive;
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: 3px;
     
   }
 
@@ -87,6 +90,9 @@
     border: none;
     border-radius: 15px;
     color: white;
+    font-family: 'Lobster', cursive;
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: 3px;
   }
 
 
