--- a/style.css
+++ b/style.css
@@ -259,101 +259,11 @@
    
   }
   main {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(10, 1fr);
-   
+    
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
   }
 
-  .item1 {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-  }
-
-  .item2 {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-  }
-
-  .item3 {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-  }
-  
-  .item4 {
-    grid-column: 1 / 2;
-    grid-row: 3 / 4;
-  }
-  
-  .item5 {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-  }
-  
-  .item6 {
-    grid-column: 2 / 3;
-    grid-row: 3 / 4;
-  }
-  
-  .item7 {
-    grid-column: 1 / 2;
-    grid-row: 4 / 5;
-  }
-  
-  .item8 {
-    grid-column: 1 / 2;
-    grid-row: 5 / 6;
-  }
-  
-  .item9 {
-    grid-column: 2 / 3;
-    grid-row: 4 / 5;
-  }
-  
-  .item10 {
-    grid-column: 2 / 3;
-    grid-row: 5 / 6;
-  }
-  
-  .item11 {
-    grid-column: 1 / 2;
-    grid-row: 6 / 7;
-  }
-  
-  .item12 {
-   /* grid-column: 3 / */
-    grid-column: 1 / 2;
-    grid-row: 7 / 8;
-}
-
- .item13 {
-    grid-column: 2 / 3;
-    grid-row: 6 / 7;
-  }
-
- .item14 {
-    grid-column: 2 / 3;
-    grid-row: 7/ 8;
-  }
-  
-  .item15 {
-    grid-column: 1 / 2;
-    grid-row: 8 / 9;
-  }
-
-  .item16 {
-    grid-column: 1 / 2;
-    grid-row: 9 / 10;
-  } 
-  
-  .item17 {
-    grid-column: 2 / 3;
-    grid-row: 8 / 9;
-  }
-
-  .item18 {
-    grid-column: 2 / 3;
-    grid-row: 9 / 10;
-  }
-
+ 
 }
